--- a/CSS/IDCard.css
+++ b/CSS/IDCard.css
@@ -2,3 +2,24 @@
 {
   background-color: azure;
 }
+
+.card
+{
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  flex-direction: column;
+  height: 400px;
+  width: 300px;
+  border-radius: 10px;
+  position: relative;
+}
+
+.header
+{
+  background-color: blue;
+}
+
+h1
+{
+  color: blue;
+}
